# AMG2023

./: CMakeLists.txt  LICENSE  Makefile  README.md  amg-config.h.in  amg.c  build_args.h  variorum_power.json
